--- a/Module4/index.html
+++ b/Module4/index.html
@@ -163,7 +163,7 @@
                                 <img src="https://randomuser.me/api/portraits/women/90.jpg" class="rounded-circle mb-3" alt="">
 
                                 <h3 class="card-title mb-3">Dr. Nguyen</h3>
-                                <p class="card-text">Graduated from the faculty of veterinary medicine from Univeisty of Ottawa.</p>
+                                <p class="card-text">Graduated from the faculty of veterinary medicine from University of Ottawa.</p>
                             </div>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                                 <img src="https://randomuser.me/api/portraits/women/32.jpg" class="rounded-circle mb-3" alt="">
 
                                 <h3 class="card-title mb-3">Dr. Montgomery </h3>
-                                <p class="card-text">Graduated from the faculty of veterinary medicine from Univeisty of Ryerson.</p>
+                                <p class="card-text">Graduated from the faculty of veterinary medicine from University of Ryerson.</p>
                             </div>
                         </div>
                     </div>
